--- a/app/src/main/res/layout/nav_header_general.xml
+++ b/app/src/main/res/layout/nav_header_general.xml
@@ -17,19 +17,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/md_xss"
+
+        android:layout_weight="1.7"
+        />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-    <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nav_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:text="Top Digital "
+        android:textSize="10dp"
+        android:textColor="#ffffff"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_weight="0.3"
+        />
+
+    <TextView
+        android:id="@+id/nav_direction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="http://vodafone.topdigital.es/"
+        android:textSize="10dp"
+        android:textColor="#ffffff"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_weight="0.2"
+        />
+
 
 </LinearLayout>
