--- a/app/src/main/res/layout/content_general.xml
+++ b/app/src/main/res/layout/content_general.xml
@@ -5,12 +5,13 @@
     android:id="@+id/content_general"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.direct.success.markdirect.activities.GeneralActivity"
     tools:showIn="@layout/app_bar_general">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ofertas_list_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
