--- a/app/src/main/res/menu/activity_general_drawer.xml
+++ b/app/src/main/res/menu/activity_general_drawer.xml
@@ -19,6 +19,10 @@
             android:id="@+id/about_us"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="About Us" />
+        <item
+            android:id="@+id/trazabilidad"
+            android:icon="@android:drawable/ic_menu_mylocation"
+            android:title="Historico"/>
     </group>
 
 
