--- a/app/src/main/res/layout/content_general.xml
+++ b/app/src/main/res/layout/content_general.xml
@@ -9,9 +9,15 @@
     tools:context="com.direct.success.markdirect.activities.GeneralActivity"
     tools:showIn="@layout/app_bar_general">
 
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ofertas_list_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
