--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,30 +4,37 @@
     android:layout_height="match_parent"
     tools:context="com.direct.success.markdirect.fragments.SettingsFragment">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <Switch
         android:id="@+id/fragment_settings___switch_notification_button"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
         android:text="Notification"
-        android:textColor="#999999"
-        android:textSize="20sp"
-        android:background="@color/cardview_dark_background"
         android:textOn="On"
         android:textOff="Off"
+        style="@style/buttons_switch"
+        android:layout_marginTop="100dp"
+        android:elevation="6dp"
+        android:background="@drawable/borde_switches"
         />
 
     <Switch
         android:id="@+id/fragment_settings___switch_bluetooth_button"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
         android:text="Bluetooth"
-        android:textColor="#999999"
-        android:textSize="20sp"
-        android:background="@color/cardview_dark_background"
+        style="@style/buttons_switch"
         android:textOn="On"
         android:textOff="Off"
         android:layout_marginTop="65dp"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/fragment_settings___switch_notification_button"
+        android:elevation="10dp"
+        android:background="@drawable/borde_switches"
         />
-
+    </RelativeLayout>
 
 </FrameLayout>
