--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,13 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.direct.success.markdirect.fragments.SettingsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-    <Switch
+    <android.support.v7.widget.SwitchCompat
         android:id="@+id/fragment_settings___switch_notification_button"
         android:layout_width="250dp"
         android:layout_height="70dp"
@@ -19,9 +20,10 @@
         android:layout_marginTop="100dp"
         android:elevation="6dp"
         android:background="@drawable/borde_switches"
+        app:theme="@style/Theme.MyActivityTheme"
         />
 
-    <Switch
+    <android.support.v7.widget.SwitchCompat
         android:id="@+id/fragment_settings___switch_bluetooth_button"
         android:layout_width="250dp"
         android:layout_height="70dp"
@@ -34,6 +36,7 @@
         android:layout_below="@id/fragment_settings___switch_notification_button"
         android:elevation="10dp"
         android:background="@drawable/borde_switches"
+        app:theme="@style/Theme.MyActivityTheme"
         />
     </RelativeLayout>
 
