--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.direct.success.markdirect.activities.LoginActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
