--- a/app/src/main/res/layout/nav_header_general.xml
+++ b/app/src/main/res/layout/nav_header_general.xml
@@ -17,8 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/md_xss"
-
+        app:srcCompat="@mipmap/logo_activa_xss"
         android:layout_weight="1.7"
         />
 
@@ -26,23 +25,11 @@
         android:id="@+id/nav_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Top Digital "
-        android:textSize="10dp"
+        android:text="más que electrodomésticos"
+        android:textSize="12dp"
         android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_weight="0.3"
         />
-
-    <TextView
-        android:id="@+id/nav_direction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="http://vodafone.topdigital.es/"
-        android:textSize="10dp"
-        android:textColor="#ffffff"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_weight="0.2"
-        />
-
 
 </LinearLayout>
