--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#FFC91616</item>
-        <item name="colorPrimaryDark">#FFC91616</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#213465</item>
+        <item name="colorPrimaryDark">#213465</item>
+        <item name="colorAccent">#213465</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
