change text size form dp to sp

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Usuario"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
     <EditText
         android:id="@+id/activity_login___user"
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Contraseña"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
     <EditText
         android:id="@+id/activity_login___password"
         android:layout_width="match_parent"
