--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,13 @@
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:padding">10dp</item>
     </style>
+    <style name="FacebookLoginButton">
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">#3C5998</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
 
     <style name="Theme.MyActivityTheme" parent="Theme.AppCompat.Light">
         <!-- colorPrimary is used for the default action bar background -->
