--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,9 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.direct.success.markdirect.activities.LoginActivity"
     android:orientation="vertical"
     >
@@ -15,14 +12,33 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+        >
+<!--
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@mipmap/imagotipo_xs"
-            />
+            app:civ_border_width="2dp"
+            app:civ_border_color="#213465"/>-->
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="#a6233566"
+            >
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@mipmap/imagotipo_m"
+                android:elevation="20dp"
+                />
+
+        </FrameLayout>
+
+
 
     <TextView
         android:id="@+id/activity_login___text"
@@ -31,22 +47,31 @@
         android:text="Usuario"
         android:textSize="20dp"
         android:layout_marginTop="50dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         />
     <EditText
         android:id="@+id/activity_login___user"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         />
     <TextView
         android:id="@+id/activity_login___text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Contraseña"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        />
     <EditText
         android:id="@+id/activity_login___password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         />
 
         <Button
@@ -54,13 +79,19 @@
             android:layout_height="50dp"
             android:text="Entrar"
             android:background="#FFC91616"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="30dp"
+            />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Aun no estoy registrado"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:layout_gravity="center"
+            />
 
       <!--  Antooooooonio -->
 
@@ -72,6 +103,9 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        />
 
 </LinearLayout>
