--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,5 +14,5 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/logosplash1"/>
+        android:src="@drawable/logo_splash1"/>
 </RelativeLayout>
