Added function to manual register

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,6 +47,7 @@
             android:textColor="@android:color/white"/>
 
         <Button
+            android:id="@+id/activity_login___registerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Aun no estoy registrado"
