--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.direct.success.markdirect.activities.RegisterActivity">
+    tools:context="com.direct.success.markdirect.activities.RegisterActivity"
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
