finished_fragment_about_us

--- a/app/src/main/res/layout/fragment_ofertas_list.xml
+++ b/app/src/main/res/layout/fragment_ofertas_list.xml
@@ -9,7 +9,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_ofertas_list___recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#79213465"
+        >
 
     </android.support.v7.widget.RecyclerView>
 
