--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,6 +68,7 @@
         />
 
         <Button
+            android:id="@+id/enter_button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="Entrar"
