--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -10,9 +10,6 @@
         android:scrollbars="none"
         >
 
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,6 +46,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="15dp"
                 android:elevation="20dp"
+                android:layout_centerVertical="true"
                 />
             <FrameLayout
                 android:layout_width="2dp"
@@ -85,42 +83,26 @@
 
             <ImageView
                 android:id="@+id/card_view_linkedin_matias"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/logolinkedin"
-                android:layout_margin="12dp"
-                android:layout_below="@id/image_matias" />
-            <TextView
-                android:layout_margin="10dp"
-                android:id="@+id/linkedin_matias_tarjeta"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="www.linkedin.com/in/josematiasalcaidejimenez"
-                android:textColor="#ffffff"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignStart="@id/email_matias_tarjeta"
+                android:layout_alignLeft="@id/email_matias_tarjeta"
+                android:src="@drawable/linkedin_icon"
                 android:layout_toRightOf="@id/image_matias"
-                android:layout_below="@id/email_matias_tarjeta"
+                android:layout_below="@+id/email_matias_tarjeta"
+                android:layout_marginBottom="10dp"
                 />
             <ImageView
                 android:id="@+id/card_view_github_matias"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="12dp"
-                android:src="@drawable/githublogo"
-                android:layout_below="@id/image_matias"
-                android:layout_toRightOf="@id/card_view_linkedin_matias"
-                />
-
-            <TextView
-                android:layout_margin="10dp"
-                android:id="@+id/git_matias_tarjeta"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="https://github.com/jmajyo"
-                android:textColor="#ffffff"
-                android:layout_toRightOf="@id/image_matias"
-                android:layout_below="@id/linkedin_matias_tarjeta"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/github_icon"
+                android:layout_alignStart="@id/email_matias_tarjeta"
+                android:layout_alignLeft="@id/email_matias_tarjeta"
+                android:layout_below="@+id/card_view_linkedin_matias"
                 android:layout_marginBottom="10dp"
                 />
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
@@ -128,7 +110,7 @@
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/card_view_4"
+            android:id="@+id/card_view_2"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -155,6 +137,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="15dp"
                     android:elevation="20dp"
+                    android:layout_centerVertical="true"
                     />
                 <FrameLayout
                     android:layout_width="2dp"
@@ -188,44 +171,27 @@
                     android:layout_toRightOf="@id/image_antonio"
                     android:layout_below="@id/nombre_antonio_tarjeta"
                     />
-                <TextView
-                    android:layout_margin="10dp"
-                    android:id="@+id/linkedin_antonio_tarjeta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="https://www.linkedin.com/in/antonio-jesus-cazalla"
-                    android:textColor="#ffffff"
-                    android:layout_toRightOf="@id/image_antonio"
-                    android:layout_below="@id/email_antonio_tarjeta"
-                    />
                 <ImageView
-                    android:id="@+id/card_view_github_antonio"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="12dp"
-                    android:src="@drawable/githublogo"
-                    android:layout_below="@id/image_antonio"
-                    android:layout_toRightOf="@+id/card_view_linkedin_antonio"
-                    />
-
-                <TextView
-                  android:layout_margin="10dp"
-                    android:id="@+id/git_antonio_tarjeta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="https://github.com/cazallau"
-                    android:textColor="#ffffff"
+                    android:id="@+id/card_view_linkedin_antonio"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignStart="@id/email_antonio_tarjeta"
+                    android:layout_alignLeft="@id/email_antonio_tarjeta"
+                    android:src="@drawable/linkedin_icon"
                     android:layout_toRightOf="@id/image_antonio"
-                    android:layout_below="@id/linkedin_antonio_tarjeta"
+                    android:layout_below="@+id/email_antonio_tarjeta"
                     android:layout_marginBottom="10dp"
                     />
                 <ImageView
-                    android:id="@+id/card_view_linkedin_antonio"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/logolinkedin"
-                    android:layout_margin="12dp"
-                    android:layout_below="@id/image_antonio" />
+                    android:id="@+id/card_view_github_antonio"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:src="@drawable/github_icon"
+                    android:layout_alignStart="@id/email_antonio_tarjeta"
+                    android:layout_alignLeft="@id/email_antonio_tarjeta"
+                    android:layout_below="@+id/card_view_linkedin_antonio"
+                    android:layout_marginBottom="10dp"
+                    />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
@@ -233,7 +199,7 @@
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/card_view_2"
+            android:id="@+id/card_view_3"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -260,10 +226,11 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="15dp"
                     android:elevation="20dp"
+                    android:layout_centerVertical="true"
                     />
                 <FrameLayout
                     android:layout_width="2dp"
-                    android:layout_height="120dp"
+                    android:layout_height="140dp"
                     android:layout_toRightOf="@id/image_marcos"
                     android:background="#ffffff"
                     android:id="@+id/frame_marcos"
@@ -294,8 +261,9 @@
                     android:layout_below="@id/nombre_marcos_tarjeta"
                     />
                 <TextView
-                    android:layout_margin="10dp"
-                    android:id="@+id/linkedin_marcos_tarjeta"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:id="@+id/web_marcos_tarjeta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="marcosvaldi.com"
@@ -305,32 +273,24 @@
                     />
                 <ImageView
                     android:id="@+id/card_view_linkedin_marcos"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/logolinkedin"
-                    android:layout_margin="12dp"
-                    android:layout_below="@id/image_marcos" />
-
-                <TextView
-                    android:layout_margin="10dp"
-                    android:id="@+id/git_marcos_tarjeta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="https://github.com/markinhos3"
-                    android:textColor="#ffffff"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignStart="@id/email_marcos_tarjeta"
+                    android:layout_alignLeft="@id/email_marcos_tarjeta"
+                    android:src="@drawable/linkedin_icon"
                     android:layout_toRightOf="@id/image_marcos"
-                    android:layout_below="@id/linkedin_marcos_tarjeta"
+                    android:layout_below="@+id/web_marcos_tarjeta"
                     android:layout_marginBottom="10dp"
                     />
-
                 <ImageView
                     android:id="@+id/card_view_github_marcos"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="12dp"
-                    android:src="@drawable/githublogo"
-                    android:layout_below="@id/image_marcos"
-                    android:layout_toRightOf="@id/card_view_linkedin_marcos"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:src="@drawable/github_icon"
+                    android:layout_alignStart="@id/email_marcos_tarjeta"
+                    android:layout_alignLeft="@id/email_marcos_tarjeta"
+                    android:layout_below="@+id/card_view_linkedin_marcos"
+                    android:layout_marginBottom="10dp"
                     />
             </RelativeLayout>
 
@@ -339,7 +299,7 @@
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/card_view_3"
+            android:id="@+id/card_view_4"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -366,6 +326,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="15dp"
                     android:elevation="20dp"
+                    android:layout_centerVertical="true"
                     />
                 <FrameLayout
                     android:layout_width="2dp"
@@ -399,43 +360,26 @@
                     android:layout_toRightOf="@id/image_elias"
                     android:layout_below="@id/nombre_elias_tarjeta"
                     />
-                <TextView
-                    android:layout_margin="10dp"
-                    android:id="@+id/linkedin_elias_tarjeta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="https://www.linkedin.com/in/eliasmuol"
-                    android:textColor="#ffffff"
-                    android:layout_toRightOf="@id/image_elias"
-                    android:layout_below="@id/email_elias_tarjeta"
-                    />
                 <ImageView
                     android:id="@+id/card_view_linkedin_elias"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/logolinkedin"
-                    android:layout_margin="12dp"
-                    android:layout_below="@id/image_elias" />
-
-                <TextView
-                    android:layout_margin="10dp"
-                    android:id="@+id/git_elias_tarjeta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="https://github.com/eliasmuol"
-                    android:textColor="#ffffff"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignStart="@id/email_elias_tarjeta"
+                    android:layout_alignLeft="@id/email_elias_tarjeta"
+                    android:src="@drawable/linkedin_icon"
                     android:layout_toRightOf="@id/image_elias"
-                    android:layout_below="@id/linkedin_elias_tarjeta"
+                    android:layout_below="@+id/email_elias_tarjeta"
                     android:layout_marginBottom="10dp"
                     />
                 <ImageView
                     android:id="@+id/card_view_github_elias"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="12dp"
-                    android:src="@drawable/githublogo"
-                    android:layout_below="@id/image_elias"
-                    android:layout_toRightOf="@id/card_view_linkedin_elias"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:src="@drawable/github_icon"
+                    android:layout_alignStart="@id/email_elias_tarjeta"
+                    android:layout_alignLeft="@id/email_elias_tarjeta"
+                    android:layout_below="@+id/card_view_linkedin_elias"
+                    android:layout_marginBottom="10dp"
                     />
             </RelativeLayout>
 
@@ -444,7 +388,7 @@
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/card_view_4"
+            android:id="@+id/card_view_5"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -504,43 +448,26 @@
                     android:layout_toRightOf="@id/image_daniel"
                     android:layout_below="@id/nombre_daniel_tarjeta"
                     />
-                <TextView
-                    android:layout_margin="10dp"
-                    android:id="@+id/linkedin_daniel_tarjeta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="https://www.linkedin.com/in/danielioniceanu"
-                    android:textColor="#ffffff"
-                    android:layout_toRightOf="@id/image_daniel"
-                    android:layout_below="@id/email_daniel_tarjeta"
-                    />
                 <ImageView
                     android:id="@+id/card_view_linkedin_daniel"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/logolinkedin"
-                    android:layout_margin="12dp"
-                    android:layout_below="@id/image_daniel" />
-
-                <TextView
-                    android:layout_margin="10dp"
-                    android:id="@+id/git_daniel_tarjeta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="https://github.com/danielioniceanu"
-                    android:textColor="#ffffff"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignStart="@id/email_daniel_tarjeta"
+                    android:layout_alignLeft="@id/email_daniel_tarjeta"
+                    android:src="@drawable/linkedin_icon"
                     android:layout_toRightOf="@id/image_daniel"
-                    android:layout_below="@id/linkedin_daniel_tarjeta"
+                    android:layout_below="@+id/email_daniel_tarjeta"
                     android:layout_marginBottom="10dp"
                     />
                 <ImageView
                     android:id="@+id/card_view_github_daniel"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="12dp"
-                    android:src="@drawable/githublogo"
-                    android:layout_below="@id/image_daniel"
-                    android:layout_toRightOf="@id/card_view_linkedin_daniel"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:src="@drawable/github_icon"
+                    android:layout_alignStart="@id/email_daniel_tarjeta"
+                    android:layout_alignLeft="@id/email_daniel_tarjeta"
+                    android:layout_below="@+id/card_view_linkedin_daniel"
+                    android:layout_marginBottom="10dp"
                     />
             </RelativeLayout>
 
